--- a/less/admin.less
+++ b/less/admin.less
@@ -123,7 +123,7 @@
     box-shadow: 0 0 3px 0 @green;
   }
   
-  .menu{
+  .select_menu{
     width: 100%;
     list-style: none;
     padding:5px;
