--- a/less/index.less
+++ b/less/index.less
@@ -28,10 +28,9 @@
 }
 
 body {
-  background-color: @bgColor;
-  // padding: 10px;
+  background-color: @bgColor;  
   color: @Color;
-  font-size: 1rem;
+  font-size: .8rem;
   font-family: rajdhani;
 }
 
