--- a/less/charts.less
+++ b/less/charts.less
@@ -6,14 +6,17 @@
 
 .charts_section{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));   
-    gap: 1rem;
+    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));   
+    gap: 10px;
     justify-content: center;
     align-items: center;
-    padding: 1rem;
+    padding: 10px;
     width: 100%;
     height: 100%;    
     background-color:@lightGray;    
+    @media (min-width: 1450px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
     .charts{
         background-color: @primaryColor;        
     }
