--- a/less/dasboard.less
+++ b/less/dasboard.less
@@ -7,34 +7,32 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  gap: 55px;
-  padding: 40px;
-  background-color:@bgColor
+  gap: 20px;
+  padding: 30px 20px 20px 30px;
+  background-color: @bgColor;  
 }
 
 .Dashboard_KPI {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   justify-content: center;
   align-items: center;
   width: 100%;
-  gap: 40px;
-
-  .KPI {
-    min-width: 100%;
-    height: 100%;
-    background-color: @primaryColor;
-    border: 1px solid @yellow;
-  }
+  gap: 20px;  
+  @media (min-width: 1450px) {
+    grid-template-columns: repeat(6, 1fr);
+  }  
 }
 
 .UsersAsigment {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 2fr));
+  grid-template-columns: repeat(auto-fill, minmax(190px, 2fr));
   justify-content: center;
   align-items: center;
   width: 100%;
-  gap: 40px;
+  gap: 20px;
+  margin-top: 30px;
+  
 
   .Users {
     width: 100%;
@@ -42,7 +40,47 @@
     background-color: @primaryColor;
   }
 }
+.Dashboard_Asigment {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%; 
+  background-color: @primaryColor;
+ 
+  h1 {
+    width: 100%;
+    font-size: 1.5rem;
+    font-weight: bold;
+    background-color: @lightGray;
+    text-align: center;
+    padding: 10px;
+  }
 
+  div {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    width: 100%;
+    padding: 10px;
+    padding-bottom: 0px;
+    
+    h2 {
+      width: 200px;
+      display: flex;
+      text-align: center;
+      flex-direction: column;
+      
+      border-radius: 8px;
+      margin-right: 20px;
+      span {
+        width: 100%;
+        font-size: 3rem;
+        text-align: center;
+      }
+    }
+  }
+}
 //==================================================================//
 //                           KPICARDS                               //
 //==================================================================//
@@ -52,9 +90,10 @@
   width: 100%;
   height: 100%;
   background-color: @primaryColor;
-  font-size: 1rem;
+  font-size: 0.8rem;
   border-top-right-radius: 20px;
   border-bottom-left-radius: 20px;
+  
 }
 
 .Symbol {
@@ -62,9 +101,9 @@
   top: -20px;
   left: -20px;
   display: flex;
-  width: 80px;
-  height: 80px;
-  font-size: 3rem;
+  width: 60px;
+  height: 60px;
+  font-size: 2rem;
   font-weight: bold;
   background-color: @green;
   justify-content: center;
@@ -81,8 +120,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 60px;
-    height: 60px;
+    width: 45px;
+    height: 45px;
     border-top-left-radius: 50%;
     border-bottom-right-radius: 0px;
     border-bottom-left-radius: 50%;
@@ -103,10 +142,10 @@
     display: flex;
     width: 100%;
     height: 80px;
-    padding: 10px 70px;
+    padding: 10px 20px 0px 60px;
     justify-content: left;
     align-items: center;
-    font-size: 1rem;
+    font-size: 0.9rem;
     font-weight: bold;
     text-align: center;
     border-bottom-left-radius: 20px;
@@ -114,11 +153,11 @@
 
   .CardInfo {
     display: flex;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    padding-top: 10px;
+    width: 100%;    
+    justify-content: center;    
+    border-bottom: 0px;
     border-bottom-left-radius: 20px;
+    
 
     ul {
       display: flex;
@@ -165,7 +204,6 @@
   background-color: @primaryColor;
   border-top-right-radius: 20px;
   border-bottom-left-radius: 20px;
-  
 
   .UserName {
     display: flex;
@@ -173,7 +211,6 @@
     width: 100%;
     height: 100%;
     position: relative;
-    
   }
 }
 .UserIcons {
@@ -181,14 +218,14 @@
   top: -20px;
   left: -20px;
   display: flex;
-  width: 80px;
-  height: 80px;
-  font-size: 2.5rem;
+  width: 60px;
+  height: 60px;
+  font-size: 1.5rem;
   font-weight: bold;
   background-color: @green;
   justify-content: center;
   align-items: center;
-  font-weight: bold;  
+  font-weight: bold;
   color: @white;
   border-top-left-radius: 50%;
   border-bottom-right-radius: 0px;
@@ -200,8 +237,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 60px;
-    height: 60px;
+    width: 45px;
+    height: 45px;
     border-top-left-radius: 50%;
     border-bottom-right-radius: 0px;
     border-bottom-left-radius: 50%;
@@ -215,50 +252,49 @@
   display: flex;
   width: 100%;
   height: 80px;
-  padding: 10px 20px 0 80px;
+  padding: 10px 10px 0 60px;
   justify-content: left;
   align-items: center;
   font-size: 1rem;
   font-weight: bold;
   text-align: center;
   border-bottom-left-radius: 20px;
-  
 }
-.UserData{
+.UserData {
   display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  padding-top: 10px;
+  border-bottom-left-radius: 20px;
+
+  ul {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100%;
-    justify-content: center;
-    padding-top: 10px;
+    padding: 10px;
+    background-color: @primaryColor;
+    list-style: none;
     border-bottom-left-radius: 20px;
 
-    ul {
+    li {
       display: flex;
-      flex-direction: column;
-      width: 100%;
-      height: 100%;
-      padding: 10px;
-      background-color: @primaryColor;
-      list-style: none;
-      border-bottom-left-radius: 20px;
+      padding: 1px;
 
-      li {
-        display: flex;
-        padding: 1px;
+      &:nth-child(odd) {
+        background-color: @lightGray;
+      }
 
-        &:nth-child(odd) {
-          background-color: @lightGray;
-        }
-
-        :nth-child(1) {
-          width: 100%;
-          padding: 0 5px;
-        }
-        :nth-child(2) {
-          width: 50;
-          font-weight: 700;
-          padding: 0 5px;
-        }
+      :nth-child(1) {
+        width: 100%;
+        padding: 0 5px;
+      }
+      :nth-child(2) {
+        width: 50;
+        font-weight: 700;
+        padding: 0 5px;
       }
     }
+  }
 }
