--- a/less/test.less
+++ b/less/test.less
@@ -1,1 +1,70 @@
 // out:false
+
+
+.Test_container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+    height: 50%;
+    padding: 10px;
+    background-color: @bgColor;  
+    border: 1px solid @gray;
+
+    .Table_Asigment{
+        background-color: @primaryColor;
+
+        .li_header{
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            width: 100%;
+            padding: 10px;
+            background-color: @lightGray;
+            border: 1px solid @blue;
+            .span_value{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 100%;
+                
+            }
+        }
+        .li_item{
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            width: 100%;
+            padding: 10px;
+            background-color: @lightGray;
+            :nth-child(2){
+            width: 150px;          
+            }
+            border: 1px solid @blue;
+            .span_value{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 100%;
+                
+                .btn {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 100px;
+                    border-radius: 5px;
+                    border: none;
+                    box-shadow: 0 0 1px 0 @blue;
+                    background-color: transparent;
+                    font-size: 0.8rem;
+                    font-weight: bold;
+                    color: @Color;
+                    padding: 4px 10px;
+                    &:hover {
+                      box-shadow: 0 0 3px 0 @blue;
+                      text-shadow: 0 0 3px @blue;
+                    }
+                  }
+            }
+        }
+    }
+}
