--- a/src/index.css
+++ b/src/index.css
@@ -907,3 +907,66 @@ main {
   box-shadow: 0 0 3px 0 #01AEF0;
   text-shadow: 0 0 3px #01AEF0;
 }
+.Test_container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 100%;
+  height: 50%;
+  padding: 10px;
+  background-color: #4a4c4d;
+  border: 1px solid #515257;
+}
+.Test_container .Table_Asigment {
+  background-color: #23262D;
+}
+.Test_container .Table_Asigment .li_header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  padding: 10px;
+  background-color: #99999916;
+  border: 1px solid #01AEF0;
+}
+.Test_container .Table_Asigment .li_header .span_value {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.Test_container .Table_Asigment .li_item {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  padding: 10px;
+  background-color: #99999916;
+  border: 1px solid #01AEF0;
+}
+.Test_container .Table_Asigment .li_item :nth-child(2) {
+  width: 150px;
+}
+.Test_container .Table_Asigment .li_item .span_value {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.Test_container .Table_Asigment .li_item .span_value .btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 0 0 1px 0 #01AEF0;
+  background-color: transparent;
+  font-size: 0.8rem;
+  font-weight: bold;
+  color: #b6b6b6;
+  padding: 4px 10px;
+}
+.Test_container .Table_Asigment .li_item .span_value .btn:hover {
+  box-shadow: 0 0 3px 0 #01AEF0;
+  text-shadow: 0 0 3px #01AEF0;
+}
