--- a/less/test.less
+++ b/less/test.less
@@ -1,70 +1,148 @@
 // out:false
 
-
+//===================================================================//
+//                                main container                             //
+//===================================================================//
 .Test_container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    width: 100%;
-    height: 50%;
-    padding: 10px;
-    background-color: @bgColor;  
-    border: 1px solid @gray;
-
-    .Table_Asigment{
-        background-color: @primaryColor;
-
-        .li_header{
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            width: 100%;
-            padding: 10px;
-            background-color: @lightGray;
-            border: 1px solid @blue;
-            .span_value{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                width: 100%;
-                
-            }
-        }
-        .li_item{
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            width: 100%;
-            padding: 10px;
-            background-color: @lightGray;
-            :nth-child(2){
-            width: 150px;          
-            }
-            border: 1px solid @blue;
-            .span_value{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                width: 100%;
-                
-                .btn {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    width: 100px;
-                    border-radius: 5px;
-                    border: none;
-                    box-shadow: 0 0 1px 0 @blue;
-                    background-color: transparent;
-                    font-size: 0.8rem;
-                    font-weight: bold;
-                    color: @Color;
-                    padding: 4px 10px;
-                    &:hover {
-                      box-shadow: 0 0 3px 0 @blue;
-                      text-shadow: 0 0 3px @blue;
-                    }
-                  }
-            }
-        }
-    }
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  background-color: @bgColor;
+  gap: 10px;
 }
+
+.Table_Asigment {
+  background-color: @primaryColor;
+  width: 100%;
+  height: 100%;
+}
+
+.Tabs_container {
+  background-color: @primaryColor;
+  width: 100%;
+  height: 100%;
+}
+
+.li_header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  padding: 15px 0;
+  font-weight: bold;
+  .span_name {
+    text-align: center;
+    width: 100px;
+    font-weight: bold;
+  }
+  .span_value {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80px;
+    gap: 10px;
+    border-right: 1px solid @gray;
+   
+  }
+}
+.li_item {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  &:nth-child(even) {
+    background-color: @lightGray;
+  }
+  .span_name {
+    text-align: left;
+    width: 100px;
+    font-weight: bold;
+  }
+  .span_value {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80px;
+    gap: 10px;
+    border-right: 1px solid @gray;
+    border-left: 1px solid @gray;
+
+    .input_value {
+      width: 30px;
+      height: 25px;
+      margin: 5px 0;
+      border: none;
+      outline: none;
+      border-radius: 4px;
+
+      &:focus{
+        border: 1px solid @blue;
+        box-shadow: 0 0 3px 0.5px @blue;
+      }
+    }
+  }
+
+  .span_btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+
+    .btn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 50px;
+      border-radius: 5px;
+      border: none;
+      box-shadow: 0 0 2px @blue;
+      background-color: transparent;
+      font-size: 0.8rem;
+      font-weight: bold;
+      color: @Color;
+      padding: 4px 10px;
+      &:hover {
+        box-shadow: 0 0 3px 0.5px @blue;
+        text-shadow: 0 0 3px @blue;
+      }
+    }
+  }
+}
+
+.tab_asigment_container {
+  padding: 10px;
+
+  .control {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    gap: 10px;
+    .span {
+      font-weight: bold;
+    }
+    .btn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100px;
+      border-radius: 5px;
+      border: none;
+      box-shadow: 0 0 2px @blue;
+      background-color: transparent;
+      font-size: 0.8rem;
+      font-weight: bold;
+      color: @Color;
+      padding: 4px 10px;
+      &:hover {
+        box-shadow: 0 0 3px 0.5px @blue;
+        text-shadow: 0 0 3px @blue;
+      }
+    }
+  }
+}
+
