--- a/src/index.css
+++ b/src/index.css
@@ -911,62 +911,131 @@ main {
   display: grid;
   grid-template-columns: 1fr 1fr;
   width: 100%;
-  height: 50%;
+  height: 100%;
   padding: 10px;
   background-color: #4a4c4d;
-  border: 1px solid #515257;
+  gap: 10px;
 }
-.Test_container .Table_Asigment {
+.Table_Asigment {
   background-color: #23262D;
+  width: 100%;
+  height: 100%;
 }
-.Test_container .Table_Asigment .li_header {
+.Tabs_container {
+  background-color: #23262D;
+  width: 100%;
+  height: 100%;
+}
+.li_header {
   display: flex;
   justify-content: space-around;
   align-items: center;
   width: 100%;
-  padding: 10px;
-  background-color: #99999916;
-  border: 1px solid #01AEF0;
+  padding: 15px 0;
+  font-weight: bold;
 }
-.Test_container .Table_Asigment .li_header .span_value {
+.li_header .span_name {
+  text-align: center;
+  width: 100px;
+  font-weight: bold;
+}
+.li_header .span_value {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 80px;
+  gap: 10px;
+  border-right: 1px solid #515257;
 }
-.Test_container .Table_Asigment .li_item {
+.li_item {
   display: flex;
   justify-content: space-around;
   align-items: center;
   width: 100%;
-  padding: 10px;
+}
+.li_item:nth-child(even) {
   background-color: #99999916;
-  border: 1px solid #01AEF0;
 }
-.Test_container .Table_Asigment .li_item :nth-child(2) {
-  width: 150px;
+.li_item .span_name {
+  text-align: left;
+  width: 100px;
+  font-weight: bold;
 }
-.Test_container .Table_Asigment .li_item .span_value {
+.li_item .span_value {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 80px;
+  gap: 10px;
+  border-right: 1px solid #515257;
+  border-left: 1px solid #515257;
 }
-.Test_container .Table_Asigment .li_item .span_value .btn {
+.li_item .span_value .input_value {
+  width: 30px;
+  height: 25px;
+  margin: 5px 0;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+}
+.li_item .span_value .input_value:focus {
+  border: 1px solid #01AEF0;
+  box-shadow: 0 0 3px 0.5px #01AEF0;
+}
+.li_item .span_btn {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100px;
+}
+.li_item .span_btn .btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
   border-radius: 5px;
   border: none;
-  box-shadow: 0 0 1px 0 #01AEF0;
+  box-shadow: 0 0 2px #01AEF0;
   background-color: transparent;
   font-size: 0.8rem;
   font-weight: bold;
   color: #b6b6b6;
   padding: 4px 10px;
 }
-.Test_container .Table_Asigment .li_item .span_value .btn:hover {
-  box-shadow: 0 0 3px 0 #01AEF0;
+.li_item .span_btn .btn:hover {
+  box-shadow: 0 0 3px 0.5px #01AEF0;
+  text-shadow: 0 0 3px #01AEF0;
+}
+.tab_asigment_container {
+  padding: 10px;
+}
+.tab_asigment_container .control {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  gap: 10px;
+}
+.tab_asigment_container .control .span {
+  font-weight: bold;
+}
+.tab_asigment_container .control .btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 0 0 2px #01AEF0;
+  background-color: transparent;
+  font-size: 0.8rem;
+  font-weight: bold;
+  color: #b6b6b6;
+  padding: 4px 10px;
+}
+.tab_asigment_container .control .btn:hover {
+  box-shadow: 0 0 3px 0.5px #01AEF0;
   text-shadow: 0 0 3px #01AEF0;
 }
