--- a/less/test.less
+++ b/less/test.less
@@ -76,11 +76,18 @@
       border: none;
       outline: none;
       border-radius: 4px;
+      text-align: center;
+      background-color: rgba(255, 255, 255, 0.562);
+      font-weight: bold;
 
       &:focus{
         border: 1px solid @blue;
         box-shadow: 0 0 3px 0.5px @blue;
       }
+    }
+    .check_value {
+      
+        font-size: 2rem;
     }
   }
 
